2004-03-21 23:15 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.[hm]: added [GormDocument _instantiateFontManager] 
	method to create the font manager when something requiring one 
	is added.  Other additions to the header to add the font manager
	functionality.   Removed declaration and references to old 
	GormFontManager class.  Modified attachObject:toParent: to properly
	detect when a menu item is being added which needs the font manager.
	* GormObjectProxy.m: Added implementation of imageForViewer
	to show a font manager icon, if the object is a NSFontManager or
	some subclass.
	* GormObjectEditor.m: Minor cleanup.
	
2004-03-21 10:27 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.[hm]: Initial code changes for new FontManager.
	Added code in [GormDocument attachObject:] to update the connection
	correctly.   Previously the connection were not being created correctly
	which require the user to disconnect the existing connection and 
	reconnect.
	* GormObjectEditor.m: Removed the check for NSFont as an object which
	can't be removed.   It will be possible to remove it once it has no
	connections.
	* Palettes/0Menus/main.m: Updated some of the connections here so
	that they are made properly when added to the document.  More work
	to come for the new FontManager implementation in Gorm.
	
2004-03-20 12:07 Gregory John Casamento <greg_casamento@yahoo.com>

	* ClassInformation.plist: Removed some methods which should
	not have been in FirstResponder.
	* Gorm.m: Added back in the ability to instantiate a NSFontManager.
	Currently, IB adds a font manager for you when you add a NSMenu which
	has connections to the font manager.   Gorm, for the time being,
	will simply allow the user to instantiate it directly.
	* GormViewEditor.m: Removed _allsubviews: and associated fuctions.
	* GormFunctions.m: Added allSubviews and associated functions here
	so that they can be used application wide.