@@ -33,6 +33,7 @@ PALETTE_NAME = 0Menus
 
 0Menus_PRINCIPAL_CLASS = MenusPalette
 0Menus_RESOURCE_FILES = MenusPalette.tiff \
+	GormMenuDrag.tiff \
 	GormMenuAttributesInspector.gorm \
 	GormMenuItemAttributesInspector.gorm
 
